# MAD-NG.py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  SOLUTION_ISSUE_26.md  cspell.config.yaml  pyproject.toml  test_native_load.py
.github/workflows/: bump-mad-ng-release.yml  compile_madng.yml  pr-coverage.yml  python-package.yml  python-publish.yml  test-publish.yaml  test-pymadng.yml
docs/: requirements.txt
docs/source/: advanced_features.md  architecture.md  communication.md  conf.py  contributing.md  dataframes.rst  debugging.md  developer.rst  ex-fodo.rst  ex-lhc-couplingLocal.rst  ex-limitations.rst  ex-lowlevel.rst  ex-managing-refs.rst  ex-recv-lhc.rst  examples.rst  function_reference.md  gettingstarted.rst  highlevel.rst  index.rst  installation.md  intro.rst  modules.rst  pymadng.rst  quickstartguide.md  reference.rst
examples/: FODOs.py  lhccouplingLocal.py  ps-twiss.py  runall.py
examples/ex-FODO/: FODOs.py  madl_mmap.mad
examples/ex-LowLevel/: ex-low-level.py  ex-send-multypes.py  ex-send-recv.py  low-level.py
examples/ex-benchmark-and-fork/: ex-benchmark-and-fork.py
examples/ex-fodo/: FODOs.py  ex-fodos.py
examples/ex-lhc-couplingLocal/: ex-lhc-couplingLocal.py  lhc-couplingLocal.py
examples/ex-limitations/: ex-limitations.py  fodo.mad
examples/ex-managing-refs/: ex-managing-refs.py
examples/ex-ps-twiss/: ex-ps-twiss.py  ps-twiss.py
examples/ex-recv-lhc/: defexpr_speed.mad  ex-defexpr.py
src/: __init__.py  pymadng.py
src/pymadng/: __init__.py  classes.py  madProc.py  mad_classes.py  mad_comm.py  mad_last.py  mad_object.py  mad_process.py  mad_strings.py  madl_buffer.mad  madl_pymad.mad  madp_classes.py  madp_last.py  madp_object.py  madp_process.py  madp_pymad.py  madp_strings.py  main.py  pymadClasses.py  sharedMemoryClass.py
tests/: CommMadTest.py  comm_test.py  comm_tests.py  obj_test.py  obj_tests.py  test_communication.py  test_debug.py  test_examples_behaviour.py  test_io_and_loading.py  test_misc_types.py  test_numeric_types.py  test_object_wrapping.py
tools/: README.deps.md  build_madng_deps_linux.sh  build_madng_deps_macos.sh  stage_madng_headers_linux.sh  stage_madng_headers_macos.sh
